--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.16.13",
     "axios": "^0.21.4",
     "js-cookie": "^3.0.1",
+    "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
