--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.4",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
+    "phosphor-react": "^1.3.1",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
