--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
     "axios": "^0.21.4",
+    "firebase": "^9.5.0",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "phosphor-react": "^1.3.1",
@@ -16,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
