--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "phosphor-react": "^1.3.1",
     "querystring": "^0.2.1",
+    "rajaongkir-nodejs": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
